material 적용 스터디

--- a/src/sass/util.scss
+++ b/src/sass/util.scss
@@ -1,5 +1,13 @@
+
 $primary-color: #0100FF;
 
 .root {
     color: $primary-color;
 }
+
+.btn {
+    color: $primary-color;
+    width: 200px;
+    background-color: white;
+}
+
