--- a/src/components/layout/Header/Sections/Header.scss
+++ b/src/components/layout/Header/Sections/Header.scss
@@ -2,9 +2,9 @@
 
 .menu {
   padding: 0 20px;
-  border-bottom: solid 1px #e8e8e8;
+  border-bottom: solid 1px #5f4444;
   overflow: auto;
-  box-shadow: 0 0 30px #f3f1f1;
+  box-shadow: 0 0 30px #d1a5a5;
   background-color: white;
 }
 
