메인로고추가 및 메뉴버튼 위치 수정#2

--- a/src/components/views/layout/Header/Sections/Header.scss
+++ b/src/components/views/layout/Header/Sections/Header.scss
@@ -8,6 +8,12 @@
   background-color: white;
 }
 
+.menu__btn {
+  float: left;
+  height: 70px;
+  margin-top: 5px;
+}
+
 .menu__logo {
   width: 150px;
   float: left;
