--- a/src/sass/util.scss
+++ b/src/sass/util.scss
@@ -1,5 +1,13 @@
 
 $primary-color: #0100FF;
+$red: #fa5252;
+$orange: #fd7e14;
+$yellow: #fcc419;
+$green: #40c057;
+$blue: #339af0;
+$indigo: #5c7cfa;
+$violet: #7950f2;
+
 
 .root {
     color: $primary-color;
