댓글 카운트 추가 및 댓글작성 API 추가

--- a/src/components/views/comment/Comment.scss
+++ b/src/components/views/comment/Comment.scss
@@ -144,7 +144,7 @@ a:-webkit-any-link {
     line-height: 1;
 }
 
-.gYeJel .profile .comment-info .username {
+.gYeJel .profile .comment-info .userEmail a {
     font-size: 1rem;
     font-weight: bold;
     color: rgb(52, 58, 64);
