--- a/src/components/views/layout/Header/Sections/Header.scss
+++ b/src/components/views/layout/Header/Sections/Header.scss
@@ -1,5 +1,9 @@
 @import '~antd/dist/antd.css';
 
+.header_area {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .menu {
   padding: 0 20px;
   border-bottom: solid 1px #5f4444;
