--- a/src/components/views/MyProfile/MyProfile.scss
+++ b/src/components/views/MyProfile/MyProfile.scss
@@ -7,7 +7,7 @@ div {
 }
 
 .dvLbCX {
-    width: 20rem;
+    // width: 20rem;
     box-shadow: rgba(0, 0, 0, 0.04) 0px 4px 16px 0px;
     display: flex;
     flex-direction: column;
@@ -18,9 +18,101 @@ div {
     overflow: hidden;
 }
 
+@media (max-width: 944px){
+    .dvLbCX {
+        width: calc(50% - 2rem);
+    }
+}
+
+@media (max-width: 767px){
+    .dvLbCX {
+        width: 100%;
+        padding-left: 1rem;
+    }
+}
 
 .dvLbCX {
     width: 100%;
-    margin: 0px;
+    padding-left: 1rem;
 }
 
+Link:-webkit-any-link {
+    cursor: pointer;
+}
+
+.ebEzFW {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+}
+
+.dxtZdc {
+    width: 100%;
+    position: relative;
+}
+
+.eBFCWh {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    flex: 1 1 0%;
+}
+
+h4 {
+    display: block;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.eBFCWh h4 {
+    font-size: 1rem;
+    line-height: 1.5;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    color: rgb(33, 37, 41);
+    margin: 0px 0px 0.25rem;
+}
+
+@media (max-width: 767px){
+    .eBFCWh h4 {
+        white-space: initial;
+    }
+}
+
+.eBFCWh .description-wrapper {
+    flex: 1 1 0%;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.eBFCWh p {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    height: 3.9375rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    color: rgb(73, 80, 87);
+    margin: 0px 0px 1.5rem;
+    overflow: hidden;
+}
+
+.eBFCWh .sub-info {
+    font-size: 0.75rem;
+    line-height: 1.5;
+    color: rgb(134, 142, 150);
+}
