--- a/src/components/views/layout/Main/MainPage.scss
+++ b/src/components/views/layout/Main/MainPage.scss
@@ -6,6 +6,37 @@ div {
     box-sizing: inherit;
 }
 
+@media (max-width: 1919px){
+    .iqwyib {
+        width: 1376px;
+    }
+}
+
+@media (max-width: 1440px){
+    .iqwyib {
+        width: 1280px;
+    }
+}
+
+@media (max-width: 1312px){
+    .iqwyib {
+        width: 912px;
+    }
+}
+
+@media (max-width: 944px){
+    .iqwyib {
+        width: calc(100% - 2rem);
+    }
+}
+
+@media (max-width: 767px){
+    .iqwyib {
+        width: calc(100% - 2rem);
+
+    }
+}
+
 .iqwyib {
     margin-left: auto;
     margin-right: auto;
@@ -48,7 +79,6 @@ div {
 .gLLJLX {
     display: flex;
     flex-wrap: wrap;
-    margin: -1rem;
 }
 
 @media (max-width: 1440px){
