메뉴 색상 변경

--- a/src/components/views/layout/menu/Menu.scss
+++ b/src/components/views/layout/menu/Menu.scss
@@ -7,3 +7,9 @@
 .listItem {
   color: black;
 }
+
+.menuItem {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  color: black;
+  font-weight: bold;
+}
