mypage 컴포넌트 작업

--- a/src/components/views/Members/Member.scss
+++ b/src/components/views/Members/Member.scss
@@ -236,3 +236,14 @@ li {
 a:-webkit-any-link {
     cursor: pointer;
 }
+
+#mArticle {
+    float: right;
+    width: 894px;
+}
+
+.wrap_set {
+    font-size: 14px;
+    background: #fff;
+    border-radius: 1px;
+}
