최근 포스트 및 공지사항 추가작업

--- a/src/components/views/layout/Main/MainPage.scss
+++ b/src/components/views/layout/Main/MainPage.scss
@@ -143,3 +143,15 @@ li {
     padding-left: 0px;
     list-style: none;
 }
+
+p {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    color: rgb(73, 80, 87);
+    margin: 0px 0px 1.5rem;
+    overflow: hidden;
+}
