UserAvatar Component 적용

--- a/src/components/views/comment/Comment.scss
+++ b/src/components/views/comment/Comment.scss
@@ -139,6 +139,11 @@ a:-webkit-any-link {
     border-radius: 50%;
 }
 
+.gYeJel .profile .comment-info {
+    margin-left: 1rem;
+    line-height: 1;
+}
+
 .gYeJel .profile .comment-info .cNHItw {
     margin-left: 1rem;
     line-height: 1;
