--- a/src/components/views/board/BoardWrite.scss
+++ b/src/components/views/board/BoardWrite.scss
@@ -32,6 +32,20 @@ body, button, input, select, td, textarea, th {
     position: relative;
 }
 
+.mce-btn {
+    display: inline-block;
+    position: relative;
+    width: auto;
+    height: auto;
+    cursor: pointer;
+}
+
+.btn-category .mce-btn {
+    width: 170px;
+    height: 30px;
+    border: 1px solid #e9e9e9;
+}
+
 .post-title {
     width: 860px;
     margin: 18px auto 17px;
@@ -52,3 +66,4 @@ body, button, input, select, td, textarea, th {
     overflow: hidden;
     letter-spacing: -.4px;
 }
+
